@@ -1609,6 +1609,9 @@ void generate_text_internal(char *p, int p_max_size,
 			OBJ(running_processes) {
 				spaced_print(p, p_max_size, "%hu", 4, cur->run_procs);
 			}
+			OBJ(threads) {
+				spaced_print(p, p_max_size, "%hu", 4, cur->threads);
+			}
 			OBJ(text) {
 				snprintf(p, p_max_size, "%s", obj->data.s);
 			}
