@@ -231,6 +231,7 @@ struct information {
 
 	unsigned short procs;
 	unsigned short run_procs;
+	unsigned short threads;
 
 	float *cpu_usage;
 	/* struct cpu_stat cpu_summed; what the hell is this? */
